postgres/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: postgres
  labels: #@ labels("netpol")
spec:
  podSelector: {}
  ingress:
  - from: #! allow metrics access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9187
#@ end
